@@ -1,3 +1,8 @@
+2005-04-18  Mark Kettenis  <kettenis@gnu.org>
+
+	* i386-dis.c: Insert hyphens into selected VIA PadLock extensions.
+	Add xcrypt-ctr.
+
 2005-04-14  Nick Clifton  <nickc@redhat.com>
 
 	* po/fi.po: New translation: Finnish.
